src/ui/snapshots/coxtop__ui__regatta__tests__renders_regatta_snapshot_at_160x46_in_the_harbor_light_theme.snap
---
source: src/ui/regatta.rs
assertion_line: 2005
expression: terminal.backend().to_string()
---
"╭ 1 chair ─────────────────────────────────────────────────────────────────────╮╭ 2 spend ─────────────────────────────────────────────────────────────────────╮"
"│● chair@omarchy:12345 @ omarchy · epoch 7 · beat 4s · live                    ││5 hour ████░░░░░░░░░░░░░░░░░░░░░░ 16% · resets 2 AM                           │"
"│lands today 2 (- phases) · needs you 1 · drafts - · housekeeping -            ││week   █████████░░░░░░░░░░░░░░░│░ 35% of 93% stop · Sun 4 AM                  │"
"╰──────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ 3 machines ──────────────────────────────────╮╭ 4 lanes over 24h ────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  omarchy ■■■ 2/3 ● login ok 12s              ││                                                                 ⢸ dash-feed-1  p1-foundations · build   $0.84│"
"│                                              ││                                                                 ⢸ dash-feed-2  p1-foundations · plan    $0.00│"
"│                                              ││                                                                 ⢸                                            │"
"│                                              ││00:00                                       lanes in use · peak 2                                        00:00│"
"╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  RUN          MACHINE    STAGE                               ATT    COST STATUS                                                                              │"
"│▶ dash-feed-2  omarchy    p1-foundations · plan                 1   $0.00 ● running ×2                                                                        │"
"│                                                                                                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 6 queue ─────────────────────────────────────────────────────────────────────────────────╮╭ inbox ───────────────────────────────────────────────────────────╮"
"│  dash-feed-streams-a-versioned-json-snapshot-of                   ████████████ 0/3 phases││needs_chair some-task budget stop after 2 attempts                │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"│                                                                                          ││                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────╯"
"╭ 8 run cost ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│$2  │                                                                                                                                            ┌───────────┐│"
"│    │                                                                                                                                            │dash-feed-1││"
"│    │                                                                                                                                            └───────────┘│"
"│    │                                                                                                                 ⢀⣀⣀⣀⣀⣀⣀⡠⠤⠤⠤⠤⠤⠤⠔⠒⠒⠒⠒⠒⠒⠊⠉⠉⠉               │"
"│$1  │                                                                                      ⣀⣀⣀⣀⣀⣀⣀⠤⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠊⠉⠉⠉⠉⠉⠉⠁                                    ⢀⡠⠔│"
"│    │                                           ⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉                                                             ⣀⠤⠒⠁  │"
"│    │⠤⠤⠤⠤⠤⠤⠤⠤⠤⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉                                                                                                  ⣀⣀⠤⠔⠒⠉      │"
"│$0  │                                                                                                                                          ⠐⠊⠉            │"
"│    └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"│13:40                                                                                                                                                    14:02│"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ history ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│today  0 lands  0 quarantines  $0.00  0 runs                                                                                                                  │"
"│no runs ended yet                                                                                                                                             │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"1-6 frames · ←→ focus · ↑↓ select · ⏎ drill down · t theme · v layout · q quit │ p pause  k kill  m move · : palette                                            "
