src/ui/snapshots/coxtop__ui__regatta__tests__renders_regatta_snapshot_in_the_harbor_light_theme.snap
---
source: src/ui/regatta.rs
expression: terminal.backend().to_string()
---
"╭1 chair───────────────────────────────────────────────────╮╭2 spend───────────────────────────────────────────────────╮"
"│chair@omarchy:12345 omarchy live                          ││█████████         5h 16% (resets 02:00)                   │"
"│beat age: 4s                                              ││██████████████████wk 35% (resets 04:00)                   │"
"│doing: land dash-feed/p2-feed · 10s                       ││hard stop marked at 93%                                   │"
"│last tick 09-28 19:59 EDT                                 ││                                                          │"
"│lands 2  launches 1  failures 1  needs chair 1            ││                                                          │"
"│chair 09-28 19:59 EDT | landed 2, launched 1              ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯"
"╭3 machines────────────────────────────────────────────────╮╭4 lanes over 24h──────────────────────────────────────────╮"
"│  omarchy 2/3 login ok                                    ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"│                                                          ││                       █                                  │"
"╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯"
"╭5 runs────────────────────────────────────────────────────╮╭6 queue───────────────────────────────────────────────────╮"
"│▶ dash-feed-1 omarchy p1-foundations build 0.84           ││  dash-feed-streams-a-versioned-json-snapshot-of 0/3 p1-fo│"
"│  dash-feed-2 omarchy p1-foundations plan 0.00            ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"│                                                          ││                                                          │"
"╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯"
"╭inbox─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│needs_chair some-task budget stop after 2 attempts                                                                    │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
