src/ui/snapshots/coxtop__ui__regatta__tests__renders_regatta_snapshot_in_the_regatta_theme.snap
---
source: src/ui/regatta.rs
assertion_line: 971
expression: terminal.backend().to_string()
---
"╭ 1 chair ─────────────────────────────────────────────────╮╭ 2 spend ─────────────────────────────────────────────────╮"
"│● chair@omarchy:12345 @ omarchy · epoch 7 · beat 4s · live││5 hour ████░░░░░░░░░░░░░░░░░░░░ 16% · resets 2 AM         │"
"│lands today 2 (- phases) · needs you 1 · drafts - · housek││week   ████████░░░░░░░░░░░░░░│░ 35% of 93% stop · Sun 4 AM│"
"╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯"
"╭ 3 machines ──────────────────────────────────╮╭ 4 lanes over 24h ────────────────────────────────────────────────────╮"
"│  omarchy 2/3 login ok                        ││                       █                                              │"
"│                                              ││                       █                                              │"
"│                                              ││                       █                                              │"
"│                                              ││                       █                                              │"
"╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯"
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│▶ dash-feed-1 omarchy p1-foundations build 0.84                                                                       │"
"│  dash-feed-2 omarchy p1-foundations plan 0.00                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭ 6 queue ──────────────────────────────────────────────────────────╮╭ inbox ──────────────────────────────────────────╮"
"│  dash-feed-streams-a-versioned-json-snapshot-of 0/3 p1-foundations││needs_chair some-task budget stop after 2 attempt│"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"╰───────────────────────────────────────────────────────────────────╯╰─────────────────────────────────────────────────╯"
