src/ui/snapshots/coxtop__ui__regatta__tests__runs_end_kinds_regatta.snap
---
source: src/ui/regatta.rs
assertion_line: 2372
expression: terminal.backend().to_string()
---
"╭ 5 runs ──────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│  RUN          MACHINE    STAGE                               ATT    COST STATUS                                      │"
"│  a-1          m0         p · n                                 2   $1.50 ● running                                   │"
"│  b-1          m0         p · n                                 2   $1.50 ● landed                                    │"
"│  c-1          m0         p · n                                 2   $1.50 ● approved                                  │"
"│  d-1          m0         p · n                                 2   $1.50 ● quarantined tests failed                  │"
"│  e-1          m0         p · n                                 2   $1.50 ● idle                                      │"
"│  f-1          m0         p · n                                 2   $1.50 ● died oom                                  │"
"│  g-1          m0         p · n                                 2   $1.50 ● stopped                                   │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
