src/ui/snapshots/coxtop__ui__regatta__tests__the_history_frame_draws_the_project_in_its_own_dim_column_before_the_initiative.snap
---
source: src/ui/regatta.rs
assertion_line: 3693
expression: terminal.backend().to_string()
---
"╭ 7 history ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│today  3 lands  1 quarantines  $4.20  5 runs                                                                          │"
"│  TIME  MACHINE    PROJECT        INITIATIVE             STATUS                          COST                         │"
"│  13:12 omarchy    pat-skylight   dash-feed              landed                         $1.25                         │"
"│  12:40 spare      -              history-frame          approved                       $0.50                         │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
