src/ui/snapshots/coxtop__ui__regatta__tests__the_history_frame_shares_the_initiative_cell_with_a_dim_project.snap
---
source: src/ui/regatta.rs
assertion_line: 3299
expression: terminal.backend().to_string()
---
"╭ 7 history ───────────────────────────────────────────────────────────────────╮"
"│today  3 lands  1 quarantines  $4.20  5 runs                                  │"
"│  13:12 omarchy    dash-feed  pat-skylig… landed                         $1.25│"
"│  12:40 spare      history-frame          approved                       $0.50│"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
